--- a/page1.html
+++ b/page1.html
@@ -1,1 +1,47 @@
-aaa
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>jTable Example</title>
+    <link href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jtable/2.4.0/themes/metro/blue/jtable.min.css"
+        rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jtable/2.4.0/jtable.min.js"></script>
+</head>
+
+<body>
+    <div id="MyTableContainer"></div>
+</body>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#MyTableContainer').jtable({
+            title: 'My Table',
+            actions: {
+                listAction: '/path/to/list',
+                createAction: '/path/to/create',
+                updateAction: '/path/to/update',
+                deleteAction: '/path/to/delete'
+            },
+            fields: {
+                Column1: {
+                    title: 'Column 1',
+                    key: true,
+                    create: true,
+                    edit: true,
+                    list: true
+                },
+                Column2: {
+                    title: 'Column 2',
+                    create: true,
+                    edit: true,
+                    list: true
+                }
+            }
+        });
+
+        $('#MyTableContainer').jtable('load');
+    });
+</script>
+</html>
