--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jtable/2.4.0/jtable.min.js"></script>
 </head>
 
-<body>
+<body>aabc
     <div id="MyTableContainer"></div>
 </body>
 <script type="text/javascript">
