--- a/page1.html
+++ b/page1.html
@@ -52,10 +52,10 @@
 
 
         var data2 = ["United States", "Canada", "Mexico", "Brazil", "Argentina"];
-$('#myInput').autocomplete(data);
+
 
 var data = ["Apple", "Banana", "Carrot", "Dragonfruit", "Eggplant", "Fig", "Grape"];
-    $("#input").autoComplete({
+    $("#input").autoComplete2({
         data: data
     });
     });
